# INE5421

./: .gitignore  CMakeLists.txt  LICENSE  README.md
context_free_languages/: CMakeLists.txt
context_free_languages/gui/: CMakeLists.txt  main.cpp
context_free_languages/gui/control/: Facade.cpp  Facade.hpp  Filler.cpp  Filler.hpp  Printer.cpp  Printer.hpp
context_free_languages/gui/view/: BooleanDialog.hpp  BooleanDialog.ui  DynamicAutomatonWidget.hpp  DynamicGrammarWidget.cpp  DynamicGrammarWidget.hpp  DynamicGrammarWidget.ui  GrammarViewer.hpp  GrammarViewer.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  NewAutomatonDialog.hpp  NewExpressionDialog.hpp  NewGrammarDialog.hpp  NumberDialog.cpp  NumberDialog.hpp  NumberDialog.ui  StaticAutomatonWidget.cpp  StaticAutomatonWidget.hpp  StaticAutomatonWidget.ui  StaticGrammarWidget.cpp  StaticGrammarWidget.hpp  StaticGrammarWidget.ui
context_free_languages/model/: CMakeLists.txt
context_free_languages/model/components/: CMakeLists.txt  GrammarComponents.cpp  GrammarComponents.hpp
context_free_languages/model/devices/: CMakeLists.txt  Grammar.cpp  Grammar.hpp
context_free_languages/model/manipulators/: CMakeLists.txt
context_free_languages/model/parsers/: CMakeLists.txt  ContextFreeGrammarParser.cpp  ContextFreeGrammarParser.hpp  IteratorWrapper.cpp
context_free_languages/tests/: CMakeLists.txt
context_free_languages/tests/components/: grammar_components_tests.cpp
context_free_languages/tests/devices/: grammar_tests.cpp
formal_languages/: CMakeLists.txt
formal_languages/components/: CMakeLists.txt  DeSimoneTreeComponents.cpp  DeSimoneTreeComponents.hpp  FiniteAutomatonComponents.cpp  FiniteAutomatonComponents.hpp  GrammarComponents.cpp  GrammarComponents.hpp
formal_languages/devices/: CMakeLists.txt  DeSimoneTreeComponents.cpp  DeSimoneTreeComponents.hpp  FiniteAutomaton.cpp  FiniteAutomaton.hpp  FiniteAutomatonComponents.cpp  FiniteAutomatonComponents.hpp  Grammar.cpp  Grammar.hpp  GrammarComponents.cpp  GrammarComponents.hpp  RegularExpression.cpp  RegularExpression.hpp  RegularExpressionComponents.cpp  RegularExpressionComponents.hpp
formal_languages/manipulators/: CMakeLists.txt  DeSimoneTree.cpp  DeSimoneTree.hpp  DevicesConverter.cpp  DevicesConverter.h  DevicesConverter.hpp  Printer.cpp  Printer.hpp
formal_languages/parsers/: CMakeLists.txt  ExpressionParser.cpp  ExpressionParser.hpp  FiniteAutomatonParser.cpp  FiniteAutomatonParser.hpp  GrammarParser.cpp  GrammarParser.hpp  IteratorWrapper.hpp
gui/: CMakeLists.txt  main.cpp
gui/control/: Facade.cpp  Facade.hpp  Filler.hpp
gui/view/: AutomatonWidget.cpp  AutomatonWidget.hpp  AutomatonWidget.ui  DynamicAutomatonWidget.cpp  DynamicAutomatonWidget.hpp  DynamicAutomatonWidget.ui  GrammarViewer.cpp  GrammarViewer.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  NewAutomatonDialog.cpp  NewAutomatonDialog.hpp  NewAutomatonDialog.ui  NewExpressionDialog.cpp  NewExpressionDialog.h  NewExpressionDialog.hpp  NewExpressionDialog.ui  NewGrammarDialog.cpp  NewGrammarDialog.hpp  NewGrammarDialog.ui  StaticAutomatonWidget.cpp  StaticAutomatonWidget.hpp  StaticAutomatonWidget.ui
regular_languages/gui/: CMakeLists.txt
regular_languages/gui/control/: Facade.hpp  Filler.hpp
regular_languages/gui/view/: BooleanDialog.cpp  DynamicAutomatonWidget.hpp  GrammarViewer.cpp  GrammarViewer.hpp  MainWindow.cpp  MainWindow.hpp  NewAutomatonDialog.cpp  NewAutomatonDialog.hpp  NewExpressionDialog.hpp  NewExpressionDialog.ui  NewGrammarDialog.hpp  StaticAutomatonWidget.hpp
regular_languages/model/components/: CMakeLists.txt  GrammarComponents.hpp
regular_languages/model/devices/: CMakeLists.txt  FiniteAutomaton.hpp  Grammar.hpp  RegularExpression.cpp  RegularExpression.hpp
regular_languages/model/parsers/: CMakeLists.txt  ExpressionParser.hpp  FiniteAutomatonParser.hpp  GrammarParser.cpp  GrammarParser.hpp  IteratorWrapper.hpp
regular_languages/tests/: CMakeLists.txt
regular_languages/tests/components/: de_simone_tree_components_tests.cpp  finite_automaton_components_tests.cpp  grammar_components_tests.cpp
regular_languages/tests/devices/: finite_automaton_tests.cpp  grammar_tests.cpp  regular_expression_tests.cpp
regular_languages/tests/manipulators/: de_simone_tree_tests.cpp  devices_converter_tests.cpp  printer_tests.cpp
regular_languages/tests/parsers/: grammar_parser_tests.cpp  regular_expression_parser_tests.cpp
src/: CMakeLists.txt  main.cpp
src/formal_devices/: CMakeLists.txt  FiniteAutomaton.cpp  FiniteAutomaton.hpp  FiniteAutomatonComponents.cpp  FiniteAutomatonComponents.hpp  Grammar.hpp  GrammarComponents.hpp  RegularExpression.hpp  RegularExpressionComponents.hpp
src/model/: CMakeLists.txt  FiniteAutomaton.cpp  FiniteAutomaton.hpp  FiniteAutomatonComponents.cpp  FiniteAutomatonComponents.hpp  Grammar.hpp  GrammarComponents.cpp  GrammarComponents.hpp  RegularExpression.cpp  RegularExpression.hpp  RegularExpressionComponents.cpp  RegularExpressionComponents.hpp
src/parser/: CMakeLists.txt  ExpressionParser.cpp  ExpressionParser.hpp  FiniteAutomatonParser.cpp  FiniteAutomatonParser.hpp  GrammarParser.cpp  GrammarParser.hpp
tests/: CMakeLists.txt
tests/components/: de_simone_tree_components_tests.cpp  finite_automaton_components_tests.cpp  grammar_components_tests.cpp
tests/devices/: finite_automaton_tests.cpp  grammar_tests.cpp  regular_expression_tests.cpp
tests/files/: dfa.txt  grammar.txt  ndfa.txt
tests/formal_devices/: finite_automaton_components.cpp  finite_automaton_tests.cpp  grammar_components_tests.cpp  regular_expression_components_test.cpp
tests/manipulators/: de_simone_tree_tests.cpp  devices_converter_tests.cpp  printer_tests.cpp  regular_expression_parser_tests.cpp
tests/model/: finite_automaton_components.cpp  grammar_components_tests.cpp  regular_expression_components_test.cpp
tests/parser/: finite_automaton_parser_tests.cpp  grammar_parser_tests.cpp
tests/parsers/: finite_automaton_parser_tests.cpp  grammar_parser_tests.cpp  regular_expression_parser_tests.cpp
(+5 files in other folders)
