################################################################################
# This is the CMakeLists file for the:
#
#   formal_languages lib
#
# Its main goals are:
#   - Create an graphic user interface.
#
################################################################################

add_subdirectory(components)
add_subdirectory(devices)
add_subdirectory(manipulators)
add_subdirectory(parsers)
